--- a/WebContent/gyhk.htm
+++ b/WebContent/gyhk.htm
@@ -99,7 +99,7 @@
 <br>
 苗昱&nbsp&nbsp12植保&nbsp;&nbsp;&nbsp;&nbsp;tell:13505618360&nbsp&nbspQQ:435832108<br>
 <br>
-营米&nbsp&nbsp11计算机&nbsp;&nbsp;tell:18356064696&nbsp&nbspQQ:1063835262<br><br>
+营米&nbsp&nbsp11计算机&nbsp;&nbsp;sina:<a href="http://weibo.com/521910456/" title="点击关注" target="_blank">Geek_ymv</a>&nbsp&nbspQQ:1063835262<br><br>
 嘿客Email:1784160856@qq.com
 <br>
 <br>
